# silkloom-core

./: .gitignore  API_IMPROVEMENTS.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  README.zh-CN.md  pyproject.toml  simple_call.py  test_improvements.py
.github/workflows/: publish.yml  tests.yml
examples/: README.md  quickstart.py  resume_with_run_id.py  structured_output.py  trajectory_od_commute.py
silkloom_core/: __init__.py  cache.py  core.py  engine.py  exceptions.py  json_utils.py  message_builder.py  models.py  nodes.py  pipeline.py  prompt_mapper.py  results.py  task.py  taskloom.py  types.py  utils.py
tests/: test_taskloom.py
