[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silkloom-core"
version = "1.0.0"
description = "SilkLoom Core: minimal stateful batch engine for LLM and VLM workloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "pydantic>=2.0",
  "pandas>=2.0.0",
  "jinja2>=3.1.0"
]
authors = [
  { name = "SilkLoom Core Contributors" }
]
license = "MIT"
keywords = ["llm", "pipeline", "workflow", "batch-processing", "silkloom"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.1.1",
]

[tool.setuptools.packages.find]
include = ["silkloom_core*"]
